# cargo-tauri-version

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
src/: main.rs
